welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:35: error: not found: value dosAuMur
		while (!dosAuMur()) { // se replace
                        ^